# cppm-homeworks

./: .gitattributes  .gitignore
Task1.1/: Task1.1.cpp  Task1.1.sln  Task1.1.vcxproj  Task1.1.vcxproj.filters
Task10.1/: CMakeLists.txt  Task10.1.cpp  Task10.1.h
Task10.2/: CMakeLists.txt  Isosceles_Triangle.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Right_Triangle.cpp  Square.cpp  Task10.2.cpp  Task10.2.h  Triangle.cpp
Task11.1/: Task11.1.sln
Task11.2/: Task11.2.sln
Task11.3/: Task11.3.sln
Task11.4/: CMakeLists.txt  FigureHierarchyConsole.cpp
Task11.4/FigureHierarchyDynamicLib/: CMakeLists.txt  Equilateral_Triangle.cpp  Equilateral_Triangle.h  Figure.cpp  Figure.h  Isosceles_Triangle.cpp  Isosceles_Triangle.h  Parallelogram.cpp  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rectangle.h  Rhombus.h  Right_Triangle.cpp  Right_Triangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
Task2.1/: Task2.1.cpp  Task2.1.sln  Task2.1.vcxproj
Task2.2/: Task2.2.cpp  Task2.2.sln  Task2.2.vcxproj
Task2.3/: Task2.3.cpp  Task2.3.sln  Task2.3.vcxproj
Task3.1/: Task3.1.cpp  Task3.1.sln  Task3.1.vcxproj
Task3.2/: Task3.2.cpp  Task3.2.sln  Task3.2.vcxproj
Task4.1/: Task4.1.cpp  Task4.1.sln  Task4.1.vcxproj
Task4.2/: Task4.2.cpp  Task4.2.sln  Task4.2.vcxproj
Task5.1/: Task5.1.cpp  Task5.1.sln  Task5.1.vcxproj
Task5.2/: Task5.2.cpp  Task5.2.sln  Task5.2.vcxproj
Task5.2.1/: Task5.2.1.cpp  Task5.2.1.sln  Task5.2.1.vcxproj  Task5.2.1.vcxproj.filters
Task5.3.1/: Task5.3.1.cpp  Task5.3.1.sln  Task5.3.1.vcxproj  Task5.3.1.vcxproj.filters
(+112 files in other folders)
